--- a/index.html
+++ b/index.html
@@ -8,27 +8,35 @@
     <div class="developer">
         <h2>Jo Fischer</h2><img src="classmates/JosephineFischer.jpg" height=100 width=100>
     </div>
+        <p class= "favorite-website"> "Favorite website:<a href="https://www.netflix.com/">Netflix</a>" </p>
     <div class="developer">
         <h2>Maddie McCardle</h2><img src="classmates/MaddieMccardle.jpg" height=100 width=100>
     </div>
+        <p class= "favorite-website"> "Favorite website:<a href="https://www.youtube.com/">Youtube</a>" </p>
     <div class="developer">
         <h2>Pat McClernan</h2><img src="classmates/PatMcclernan.jpg" height=100 width=100>
     </div>
+        <p class= "favorite-website"> "Favorite website:<a href="https://xkcd.com/">xkcd</a>" </p>
     </div>
     <div class="developer">
         <h2>Idan Zonshein </h2><img src="classmates/IdanZonshein.jpg" height=100 width=100>
     </div>
+        <p class= "favorite-website"> "Favorite website:<a href="https://www.github.com/">Github</a>" </p>
     <div class="developer">
         <h2>Stove McKeon</h2><img src="classmates/StephenMckeon.jpg" height=100 width=100>
     </div>
+        <p class= "favorite-website"> "Favorite website:<a href="https://wwwreddit.com/">Reddit</a>" </p>
     <div class="developer">
         <h2>Aaron Wilson</h2><img src="classmates/AaronWilson.jpg" height=100 width=100>
     </div>
+        <p class= "favorite-website"> "Favorite website:<a href="https://www.wikipedia.org">Wiki</a>" </p>
     <div class="developer">
         <h2>Andrew Kloecker</h2><img src="classmates/AndrewKloecker.jpg" height=100 width=100>
     </div>
+        <p class= "favorite-website"> "Favorite website:<a href="https://nitro.powerhrg.com/connect">Nitro</a>" </p>
     <div class="developer">
         <h2>Liam Tinney/</h2><img src="classmates/LiamTinney.jpg" height=100 width=100>
     </div>
+    <p class= "favorite-website"> "Favorite website:<a href="https://old.reddit.com/">Old Reddit</a>" </p>
 </body>
 </html>
