Add favorite foods and pic

--- a/index.html
+++ b/index.html
@@ -38,5 +38,34 @@
         <h2>Liam Tinney/</h2><img src="classmates/LiamTinney.jpg" alt="Liam" height=100 width=100>
         <p class= "favorite-website"> "Favorite website:<a href="https://old.reddit.com/">Old Reddit</a>" </p>
     </div>
+
+
+
+    <div class="favorite-foods">
+        <h2>My Favorite Foods</h2>
+        <ol>
+            <li>Dan Dan Noodles</li>
+            <li>Curly Fries</li>
+            <li>Sandwiches</li>
+        </ol>
+    </div>
+
+    <div class="favorite-foods">
+        <h2>My Partner's Favorite Foods</h2>
+        <ol>
+            <li>Calamari</li>
+            <li>Mashed Potatoes</li>
+            <li>Ice Cream</li>
+        </ol>
+        
+    </div>
+    
+    <div class="favorite-foods-pic">
+        <a href="https://en.wikipedia.org/wiki/Ice_cream">
+        <img src="Other Pic/Rainbow-Ice-Cream-14-copy.jpg" alt="Favorite Foods Example" title="Favorite Foods Example" height=400 width=300>
+        </a>         
+    </div>
+
+
 </body>
 </html>
